@@ -274,6 +274,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 14063) Power search form missing <label> for redirects check
 * (bug 14111) Similar filename warning links now lead to correct page
 * (bug 14082) Fix for complex text input vs AJAX suggestions on some browsers
+* (bug 13693) Categories sometimes claim to have a negative number of members
 
 
 === API changes in 1.13 ===
